doc/专栏/k8s/devops脚本/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-application-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.ts.com
      http:
        paths:
          -path: /
            pathType: Prefix
            backend:
              service:
                name: your-application-service
                port:
                  number: 80
